<resources>
    <string name="app_name">Contacts</string>
    <string name="contactID">Contact ID</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="mycontacts">My Contactcs</string>
</resources>
